@@ -4468,6 +4468,7 @@ app.get('/stats.json', [noCacheJson, recordResponseTime, checkPermissions(['hide
       fields.deltaOverloadDroppedPerSec = Math.floor(fields.deltaOverloadDropped * 1000.0 / fields.deltaMS);
       fields.deltaESDroppedPerSec = Math.floor(fields.deltaESDropped * 1000.0 / fields.deltaMS);
       fields.deltaTotalDroppedPerSec = Math.floor((fields.deltaDropped + fields.deltaOverloadDropped) * 1000.0 / fields.deltaMS);
+      fields.runningTime = fields.currentTime - fields.startTime;
       results.results.push(fields);
     }
 
