@@ -21,6 +21,11 @@ NOTICE: Restart wiseService before capture when upgrading
 2.4.2 2020/10/xx
   - NOTE - this is the last version to support ES 6
   - viewer - support utf8 chars in content-disposition
+  - viewer - add capture process restart to timeline graphs
+  - viewer - add "bookmarks"
+             apply a view's expression to the search input without issuing a query
+  - viewer - fix anonymous users settings not being saved
+  - viewer - share hunts between users
   - capture - QUIC version 5x detection
 
 2.4.1 2020/09/28
